fix: Benny Dayal image on mobile

--- a/src/Styles/ProfShow.module.css
+++ b/src/Styles/ProfShow.module.css
@@ -10,7 +10,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 3;
+  z-index: 10;
 }
 .marqueeBG {
   height: 100%;
@@ -123,7 +123,7 @@
   position: absolute;
   right: 0;
   bottom: 0;
-  z-index: 2;
+  z-index: 4;
   transform: scale(0.85) translateX(10%) translateY(12%);
 }
 .starRight {
@@ -182,7 +182,7 @@
   position: absolute;
   right: 0;
   bottom: 0;
-  z-index: 2;
+  z-index: 5;
   transform: scale(0.75) translateX(40%) translateY(60%);
 }
 @keyframes infiniteright {
